Fix label spacing in admin badges view

--- a/src/Badger/GateBundle/Resources/public/css/main.less
+++ b/src/Badger/GateBundle/Resources/public/css/main.less
@@ -78,3 +78,9 @@
   margin-bottom: 30px;
   color: #ffffff;
 }
+
+.extra.content {
+  .tiny.label {
+    margin: 2px 0;
+  }
+}
